ruby.h: error only in the core

* include/ruby/ruby.h (RUBY_SAFE_LEVEL_CHECK): make only
  rb_set_safe_level(4) an error always but make rb_secure(4) an error
  only in the core.  [ruby-dev:47517] [Bug #8652]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@42037 b2dd03c8-39d4-4d8f-98ff-823fe69b080e